# django-dashboards

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  package.json  postcss.config.js  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
dashboards/: apps.py  config.py  dashboard.py  log.py  permissions.py  registry.py  urls.py  utils.py  views.py
dashboards/component/: __init__.py  base.py  filter.py  filters.py  form.py  layout.py  map.py  text.py
dashboards/component/chart/: __init__.py  chart.py  serializers.py
dashboards/component/gauge/: __init__.py  gauge.py
dashboards/component/stat/: __init__.py  serializers.py  stat.py
dashboards/component/table/: mixins.py  serializers.py  table.py
dashboards/menus/: menu.py  registry.py
dashboards/meta/: __init__.py
dashboards/templatetags/: dashboards.py
datorum/dashboards/: README.md  apps.py  config.py  dashboard.py  forms.py  log.py  permissions.py  schema.py  urls.py  utils.py  views.py
datorum/pipelines/: apps.py  base.py  config.py  models.py  registry.py  urls.py  views.py
demo/: config  manage.py  requirements.in  requirements.txt  setup.cfg
demo/demo/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
demo/demo/churn/: admin.py  (+9 more)
demo_pipelines/: .gitignore  datorum_pipelines  requirements.in  requirements.txt
demo_pipelines/demo/: celery.py  settings.py  urls.py
demo_spa/: apollo_client.ts  appContext.js  package.json  requirements.in  requirements.txt
demo_spa/components/: index.tsx
demo_spa/pages/: _app.tsx  index.tsx
demo_spa/styles/: base.scss  globals.css  globals.scss  layout.scss
demo_spa/types/: dashboard.ts
demos/dashboard/: dev-docker-compose.yml.default  manage.py  requirements.in  requirements.txt
demos/dashboard_spa/: next.config.js  package.json  tsconfig.json  typings.d.ts
demos/github/: dev-docker-compose.yml.default  manage.py  requirements.in  requirements.txt
demos/pipeline/: dev-docker-compose.yml.default  requirements.in  requirements.txt
django-datorum/: README.md  requirements.in  requirements.txt  setup.cfg  setup.py
django-datorum-pipelines/: .gitignore  echo_example.py  requirements.in  requirements.txt  setup.cfg  setup.py
django-datorum-pipelines/datorum_pipelines/: __init__.py  admin.py  apps.py  celery_tasks.py  config.py  log.py  models.py  status.py  urls.py  views.py
django-datorum-pipelines/tests/: conftest.py  settings.py
django-datorum/datorum/: config.py  dashboard.py  exceptions.py  forms.py  layout.py  log.py  permissions.py  registry.py  schema.py  types.py  urls.py  utils.py  views.py
docs/: Makefile  changelog.rst  conf.py  contributing.rst  docs_dj_settings.py  index.rst  requirements.in  requirements.txt
docs/dashboards/: index.rst
docs/pipelines/: index.rst
tests/: conftest.py  settings.py  urls.py  utils.py
tests/dashboards/: dashboards.py  fakes.py  fixtures.py  settings.py  test_dashboard.py  test_layout.py  test_model_dashboard.py  test_permissions.py  test_registry.py  test_render.py  test_schema.py  test_urls.py  test_view.py
tests/meta/: test_meta.py
tests/pipelines/: fixtures.py  pipelines.py  test_management_commands.py  test_pipeline_start.py
wildcoeus/: config.py
wildcoeus/dashboards/: README.md  apps.py  config.py  dashboard.py  forms.py  log.py  permissions.py  registry.py  schema.py  types.py  urls.py  utils.py  views.py
wildcoeus/meta/: __init__.py
wildcoeus/pipelines/: __init__.py  admin.py  apps.py  baker_recipes.py  base.py  config.py  forms.py  log.py  models.py  registry.py  status.py  storage.py  urls.py  utils.py  views.py
wildcoeus/registry/: registry.py
(+535 files in other folders)
