[metadata]
name = django-dashboards
version = 0.1.5
description = Tools for building data dashboards with Django
long_description = file: README.rst
url = https://github.com/wildfish/django-dashboards
author = Wildfish
author_email = developers@wildfish.com
license = BSD-3-Clause
classifiers =
    Development StatusDevelopment Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2
    django-cors-headers
    django-asset-definitions
    pandas
    plotly
    plotly_express
    typing_extensions  # required for 3.9 support atm

[tool:pytest]
testpaths =
    tests
    dashboards
addopts = --black --isort --mypy --cov=dashboards --cov-report=term --cov-report=html
DJANGO_SETTINGS_MODULE = tests.settings
django_find_project = false
pythonpath = . src

[flake8]
max-line-length = 88
ignore = E123,E128,E203,E501,W503
exclude = .git,*/migrations/*,*/static/CACHE/*,docs,*/snapshots/*

[isort]
multi_line_output = 3
line_length = 88
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .git,migrations

[coverage:run]
omit =
    */migrations/*
    */snapshots/*

[doc8]
max-line-length = 88
ignore-path = *.txt

[mypy]
ignore_missing_imports = True
check_untyped_defs = true

[mypy-*.migrations.*]
ignore_errors = True
